--- a/WebDeveloper.DataAccess/WebDeveloper.DataAccess.csproj
+++ b/WebDeveloper.DataAccess/WebDeveloper.DataAccess.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ObjectExtension.cs" />
     <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportRepository.cs" />
     <Compile Include="WebContextDb.cs" />
   </ItemGroup>
   <ItemGroup>
