--- a/WebDeveloper/Web.config
+++ b/WebDeveloper/Web.config
@@ -19,11 +19,19 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd"  verb="*"
+           type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </httpHandlers>
+    
   </system.web>
+  
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
